fix app spacing

--- a/src/components/AppsList/AppsList.module.css
+++ b/src/components/AppsList/AppsList.module.css
@@ -1,5 +1,5 @@
-.AppList {
-  display: grid;
+ .AppList { 
+  display: flex;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
   min-height: 40vh;
